syntax = "proto3";

package proto.email.v1;

option go_package = "github.com/codeclout/AccountEd/notifications";

message ValidateEmailAddressResponse {
  string autoCorrect = 1;
  string memberId = 2;
  bool memberIdPending = 3;
  bool shouldConfirmAddress = 4;
}

message EmailVerificationPayload {
  string text = 1;
  bool value = 2;
}

message ValidateEmailAddressRequest {
  string address = 1;
}

message ValidFormat {
  string text = 1;
  bool value = 2;
}
